[package]
name = "pi_graph"
version = "0.1.4"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2021"
description = "dag interface."
repository = "https://github.com/GaiaWorld/pi_graph"
license = "MIT OR Apache-2.0"
keywords = ["pi", "dag", "graph"]

[dependencies]
log = "0.4"
pi_hash = "0.1"
pi_share = "0.4"
pi_print_any = "0.1"

[dev-dependencies]
pcg_rand = "0.13"
rand_core = "0.6"
env_logger = "0.9"